--- a/VAKidney/app/src/main/res/values/strings.xml
+++ b/VAKidney/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="terms_and_conditions">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris egestas quam, ut aliquam massa nisl quis neque. Suspendisse in orci enim. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit.</string>
     <string name="error_empty_email">*Please enter email</string>
     <string name="error_empty_password">*Please enter password</string>
-    <string name="error_email">*Please re-enter email Address</string>
+    <string name="error_email">*Please re-enter email address</string>
     <string name="error_password">*Please re-enter Password</string>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="title_home">Home</string>
@@ -28,6 +28,8 @@ Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit
     <string name="workout">WORKOUT</string>
     <string name="check_and_monitor_your_body">CHECK AND MONITOR YOUR BODY</string>
     <string name="welcome2_desc">Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris egestas quam, ut aliquam massa nisl quis neque. Suspendisse in orci enim.</string>
-    <string name="consistent_medication">CONSISTENT MEDICATION</string>
+    <string name="consistent_medication">CONSISTENT MEDICATIONS</string>
     <string name="terms_of_service_and_nliability_release">TERMS OF SERVICE AND  LIABILITY RELEASE</string>
+    <string name="validate_email">Please enter valid email address</string>
+    <string name="welcome_string">Welcome </string>
 </resources>
