Change app name.

--- a/VAKidney/app/src/main/res/values/strings.xml
+++ b/VAKidney/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">VA Kidney</string>
+    <string name="app_name">myKidneyNutrition</string>
     <string name="logo_text">Are you ready to take charge of your health? Ready. Set Go!</string>
 
     <!-- TODO: Remove or change this placeholder text -->
