Fixed issues for #76, #77, #72 and #80

--- a/VAKidney/app/src/main/res/values/strings.xml
+++ b/VAKidney/app/src/main/res/values/strings.xml
@@ -24,6 +24,9 @@ Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan i
 
 Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris egestas quam, ut aliquam massa nisl quis neque. Suspendisse in orci enim.</string>
     <string name="generic_error_field">*Please enter this field</string>
+    <string name="non_empty_string">*Should be non-empty string</string>
+    <string name="positive_number">*Should be a positive number</string>
+    <string name="select_unit">*Select Units</string>
     <string name="feature_not_implemented">This feature is not yet implemented</string>
     <string name="drink_water">Know Your Fluid Intake</string>
     <string name="desc">Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat</string>
